# minivan

./: .gitignore.txt  .gitmodules  CMakeLists.txt  README.md  flake.nix  gitignore.txt  meson.build
.cache/clangd/index/: Source.cpp.2C54585DEF6FBEE0.idx  TEST_cube.h.0AD689CE9E06395C.idx  _fixes.hpp.A3605A4124342D94.idx  _vectorize.hpp.8B799230AF6CF3EC.idx  camera.cpp.B56CA4C602D31823.idx  camera.h.0442280D5E1951AB.idx  common.hpp.29512AA4027693DD.idx  compute_common.hpp.37AFE94EE6D9E029.idx  compute_vector_relational.hpp.79509D1D87FAC727.idx  constants.hpp.F4151D550E0DDD35.idx  constants.inl.6BA26F83EA784843.idx  context.c.558287B3634A413C.idx  controls.cpp.DE449007BACB40B5.idx  controls.h.E5044517F7101D5F.idx  cursor.cpp.EC3D2AD91B0B032A.idx  cursor.h.68BA09C923B0B7D9.idx  defines.h.82FF42907384AFCF.idx  egl_context.c.382E3896F689894C.idx  egl_context.h.EF62CA889BC8F80B.idx  epsilon.hpp.16767C72E9DB9B10.idx  epsilon.inl.B200AAE9787E9CAF.idx  exponential.hpp.7ACE690CD9D5B0AA.idx  func_common.inl.746A26155A8289E0.idx  func_exponential.inl.BBF84A2A375BDDCB.idx  func_geometric.inl.6EC92D85B94C145B.idx  func_integer.inl.ED27348C291590ED.idx  func_matrix.inl.9510AF12F5B03F07.idx  func_packing.inl.CBA2D4FEF0ABEE88.idx  func_trigonometric.inl.1348ED618F722989.idx  func_vector_relational.inl.237841E9E546394E.idx  fwd.hpp.187725CD7F014CFF.idx  geometric.hpp.C202BF02F6E86E99.idx  glad.c.D89EDFB0BA80202C.idx  glad.h.B91C29F37A7E94E1.idx  glfw3.h.CB847D734AE836FE.idx  glfw_config.h.17919AC1EBC8DBAB.idx  glm.hpp.D594BF1E327BEBE0.idx  glx_context.c.FBF4FD9249B0398F.idx  glx_context.h.2CC1BE92BC7985DC.idx  image.cpp.38CE17BA099FB5E4.idx  (+203 more)
glad/: Makefile
glfw/glfw-3.3.8/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/glfw-3.3.8/src/: Makefile  cmake_install.cmake
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/Shaders/: Gouraund.shader  LampShader.shader  Phong.shader
src/: Source.cpp  TEST_cube.h  camera.cpp  camera.h  commands.cpp  commands.hpp  controls.cpp  controls.h  cursor.cpp  cursor.h  defines.h  image.cpp  image.h  indexBuffer.cpp  indexBuffer.h  main.cpp  mesh.cpp  mesh.h  model.h  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  texture.cpp  texture.h  uniformBuffer.cpp  uniformBuffer.h  utility.hpp  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h  vulkan_context.cpp  vulkan_context.hpp  vulkan_engine.hpp
